--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -2,7 +2,7 @@
 
 	<center><iframe id="crocFrame" width="700" height="600" class="embeddrop" frameborder="0" src="https://crocodoc.com/view/<%= @binder.current_version.get_croc_session %>" ></iframe></center>
 
-<% elsif !@bincer.current_version.vidtype.empty? %>
+<% elsif !@binder.current_version.vidtype.empty? %>
 
 	<% if @binder.current_version.vidtype == "zen" %>
 
