zen fullscreen fix?

--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -6,7 +6,7 @@
 
 	<% if @binder.current_version.vidtype == "zen" %>
 
-		<center><iframe width="700" height="390" class="embeddrop" frameborder="0" src="<%= zenframe(@binder) %>" allowfullscreen ></iframe></center>
+		<center><iframe width="700" height="390" class="embeddrop" frameborder="0" src="<%= zenframe(@binder) %>" allowfullscreen webkitAllowFullScreen mozallowfullscreen></iframe></center>
 
 	<% elsif @binder.current_version.vidtype == "youtube" %>
 
