--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -38,7 +38,7 @@
 			</div>
 
 			<div class="imgbox">
-				<img src="<%= current_teacher.info.avatar.thumb_lg.url %>" class="imger" />
+				<img src="<%= current_teacher.thumb_lg %>" class="imger" />
 			</div>
 
 
