--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -39,7 +39,7 @@
 						<div class="itemwrap">
 							<div class="imgarea">
 								<a href="/<%= binder.find_owner.username %>">
-									<img src="<%= binder.find_owner.info.avatar.thumb_md %>" />
+									<img src="<%= binder.find_owner.thumb_md %>" />
 								</a>
 							</div>
 
