--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -157,7 +157,15 @@
 
 			            </div>
 
-			            <div class="descarea"><%= binder.body.empty? ? "<span style='font-style:italic;color:#aaa'>No description</span>".html_safe : truncate(strip_tags(binder.body), :length => 250, :omission => "... <u>see more</u>").html_safe %></div>
+			            <div class="descarea">
+		            	<% if !binder.body.empty? %>
+		            		<%= truncate(strip_tags(binder.body), :length => 250, :omission => "... <u>see more</u>").html_safe %>
+		            	<% elsif !binder.current_version.nil? &&!binder.current_version.doctext.nil? && !binder.current_version.doctext.empty? %>
+		            		<%= truncate(strip_tags(binder.current_version.doctext), :length => 250, :omission => "... <u>see more</u>").html_safe %>
+		            	<% else %>
+		            		<%= "<span style='font-style:italic;color:#aaa'>No description</span>".html_safe %>
+		            	<% end %>
+			            </div>
 			        </div>
 
 			        <div class="lastupdate">Last updated by <%= link_to "#{binder.fname} #{binder.lname}", "/#{binder.user}" %> <span title="<%= Time.at(binder.last_update).to_datetime %>"><%= time_ago_in_words(Time.at(binder.last_update).to_datetime) %> ago</span></div>
