--- a/app/views/layouts/_feed.html.erb
+++ b/app/views/layouts/_feed.html.erb
@@ -85,7 +85,7 @@
 		<div class="newsitem">
 			<div class="imgarea">
 				<a href="<%= "/#{f[:owner].username}" %>">
-					<img src=<%= f[:owner].info.avatar.thumb_md.url.to_s if !f[:owner].info.nil? && !f[:owner].info.avatar.nil? %>>
+					<img src="<%= f[:owner].thumb_md %>" >
 				</a>
 			</div>
 			<% 
