--- a/app/views/user_mailer/system_invite.html.erb
+++ b/app/views/user_mailer/system_invite.html.erb
@@ -1,6 +1,9 @@
-Hi there! Eric from Claco (formerly Classconnect) here :D We've been working around the clock to get our new site online and it's finally ready! Here is your secret link to create an account on our exclusive beta:<br />
+Hi there!<br />
+Eric from Claco (formerly class connect) here :D We've been working around the clock to get our new site online and it's finally ready!<br />
 <br />
+Here is your secret link to create an account on our exclusive beta:<br />
 <%= link_to @link, @link %><br />
 <br />
 Let me know if you have any questions! Once you have the chance to poke around, I'd love to hear your feedback :)<br />
+<br />
 -Eric
