Added html tag to emails

--- a/app/views/user_mailer/system_invite.html.erb
+++ b/app/views/user_mailer/system_invite.html.erb
@@ -1,3 +1,10 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+<head>
+    <title></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
 Hi there!<br />
 Eric from Claco (formerly class connect) here :D We've been working around the clock to get our new site online and it's finally ready!<br />
 <br />
@@ -7,3 +14,5 @@ Here is your secret link to create an account on our exclusive beta:<br />
 Let me know if you have any questions! Once you have the chance to poke around, I'd love to hear your feedback :)<br />
 <br />
 -Eric
+</body>
+</html>
