Added html tag to emails

--- a/app/views/user_mailer/user_invite.html.erb
+++ b/app/views/user_mailer/user_invite.html.erb
@@ -1,3 +1,10 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+<head>
+    <title></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
 Hi there!<br />
 <%= @sender.first_last %> has sent you an exclusive beta invite for Claco. Visit the secret link below to create your account:<br />
 <br />
@@ -6,3 +13,5 @@ Hi there!<br />
 To learn more about Claco, take a look at http://www.claco.com or reply to this email!<br />
 <br />
 -Team Claco
+</body>
+</html>
