--- a/app/views/layouts/_teacherlist.html.erb
+++ b/app/views/layouts/_teacherlist.html.erb
@@ -3,7 +3,7 @@
 	%>
 	<div class="listitem">
 		<a href="<%= "/#{t.username}" %>">
-			<img src="<%= t.thumb_md %>" class="thumbster" />
+			<img src="<%= Teacher.thumb_md(t) %>" class="thumbster" />
 		</a>
 		<div class="infowrap">
 			<div class="bigtitle">
