--- a/app/views/layouts/feedpieces/_feedsub.html.erb
+++ b/app/views/layouts/feedpieces/_feedsub.html.erb
@@ -6,7 +6,7 @@
 				<% #if !(@subscribee.info.avatar.nil? || @subscribee.info.avatar.url=="/assets/placer.png") 
 				%>
 				
-				<div class="previmg" style="background-image: url('<%= @subscribee.thumb_mg %>');background-repeat: no-repeat;background-position: center; width:122px; -webkit-border-radius: 4px;"></div>
+				<div class="previmg" style="background-image: url('<%= Teacher.thumb_mg(@subscribee) %>');background-repeat: no-repeat;background-position: center; width:122px; -webkit-border-radius: 4px;"></div>
 				
 
 				<% if !@subscribee.info.bio.nil? && !@subscribee.info.bio.empty? %>
@@ -54,7 +54,7 @@
 					<% #if !(@subscribee.info.avatar.nil? || @subscribee.info.avatar.url=="/assets/placer.png") 
 					%>
 
-					<div class="previmg" style="background-image: url('<%= @subscribee.thumb_mg %>');background-repeat: no-repeat;background-position: center; width:122px; -webkit-border-radius: 4px;"></div>
+					<div class="previmg" style="background-image: url('<%= Teacher.thumb_mg(@subscribee) %>');background-repeat: no-repeat;background-position: center; width:122px; -webkit-border-radius: 4px;"></div>
 
 
 					<% if !@subscribee.info.bio.nil? && !@subscribee.info.bio.empty? %>
