--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -56,7 +56,7 @@
         <% end %>
         <% end %>
 
-        <a id="<%= "messbtn" if signed_in? %>" class="btn btn-medium" <%= signed_in? ? "" : 'href="/apply"'.html_safe %>">
+        <a <%= 'id="messbtn"'.html_safe if signed_in? %> class="btn btn-medium" <%= signed_in? ? "" : 'href="/apply"'.html_safe %>>
           <%= image_tag("profile/message.png", :style => "float:left;height:14px;margin:2px 5px 0 0") %>
           Message
         </a>
