--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -82,11 +82,15 @@
 			As seen on...
 		</div>
 		<center>
+			<!-- 
 		<%= image_tag("public/abc.png", :style => "height:50px") %>
 		<%= image_tag("public/cnn.png", :style => "height:40px") %>
 		<%= image_tag("public/nbc.png", :style => "height:55px; margin-top:-5px") %>
 		<%= image_tag("public/fast.png", :style => "height:60px") %>
 		<%= image_tag("public/usatoday.png", :style => "height:50px; margin-right:0px") %>
+ -->
+
+		<%= render 'layouts/pressimgs' %>
 		</center>
 	</div>
 </div>
