--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,7 +4,10 @@
       <div class="navbar-inner">
         <div class="container">
 
-          <a class="brand" href="/"><%= image_tag("claco.png", :style => "height:24px") %></a>
+          <a class="brand" href="/">
+            <!-- <%= image_tag("claco.png", :style => "height:24px") %> -->
+            <%= render 'layouts/logo' %>
+          </a>
           <div class="nav-collapse">
 
 
