--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -8,7 +8,7 @@
 
 
 			<div class="addtl">
-				Find, build and share resources with teachers across the hall or across the world — aligned with <%= image_tag('public/core.png', :style => "margin: -2px 3px 0 0;width:130px") %>
+				Find, build and share resources with teachers across the hall or across the world — aligned with <%= render 'layouts/commoncorelogo' %>
 
 				<div style="margin-top:20px;margin-bottom:5px;height:50px">
 					<a href="/about" style="position:absolute;padding:15px 15px 15px 30px;text-decoration:underline">Learn more</a>
@@ -82,14 +82,6 @@
 			As seen on...
 		</div>
 		<center>
-			<!-- 
-		<%= image_tag("public/abc.png", :style => "height:50px") %>
-		<%= image_tag("public/cnn.png", :style => "height:40px") %>
-		<%= image_tag("public/nbc.png", :style => "height:55px; margin-top:-5px") %>
-		<%= image_tag("public/fast.png", :style => "height:60px") %>
-		<%= image_tag("public/usatoday.png", :style => "height:50px; margin-right:0px") %>
- -->
-
 		<%= render 'layouts/pressimgs' %>
 		</center>
 	</div>
