--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -13,6 +13,7 @@
 //= require jquery
 //= require jquery_ujs
 //= require jquery.pjax
+//= require dropdown
 
 $(document).ready(function() {
 	$(".noclose").on("click", function(e){
