--- a/app/views/applicants/apply.html.erb
+++ b/app/views/applicants/apply.html.erb
@@ -1,7 +1,10 @@
 <% content_for :headcon do %>
     <%= stylesheet_link_tag    "devise/apply", :media => "all" %>
+<% end %>
+<% content_for :botcon do %>
     <%= javascript_include_tag "editinfo/apply" %>
 <% end %>
+
 
 
 
