--- a/app/views/applicants/create.html.erb
+++ b/app/views/applicants/create.html.erb
@@ -1,8 +1,9 @@
 <% content_for :headcon do %>
     <%= stylesheet_link_tag    "devise/apply", :media => "all" %>
+<% end %>
+<% content_for :botcon do %>
     <%= javascript_include_tag "editinfo/apply" %>
 <% end %>
-
 
 
 <div class="splashback">
