--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,7 @@
 <% content_for :headcon do %>
     <%= stylesheet_link_tag    "devise/newuser", :media => "all" %>
+<% end %>
+<% content_for :botcon do %>
     <%= javascript_include_tag "editinfo/newuser" %>
 <% end %>
 
