--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -1,8 +1,10 @@
 <% content_for :headcon do %>
-	<%= javascript_include_tag "home/main" %>
 	<%= stylesheet_link_tag    "home/main", :media => "all" %>
-	<%= javascript_include_tag "binders/icheck" %>
     <%= stylesheet_link_tag    "widgets/icheck", :media => "all" %>
+<% end %>
+<% content_for :botcon do %>
+	<%= javascript_include_tag "home/main" %>
+	<%= javascript_include_tag "binders/icheck" %>
 <% end %>
 
 <%= javascript_tag "username = \"#{current_teacher.username}\"" %>
