--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,9 +1,11 @@
 <% content_for :headcon do %>
-  <%= javascript_include_tag "profile/main" %>
   <%= stylesheet_link_tag "teacher", :media => "all" %>
-  <%= javascript_include_tag "home/main" %>
   <%= stylesheet_link_tag    "home/main", :media => "all" %>
-  <% stylesheet_link_tag 'binders/folder' %>
+  <%= stylesheet_link_tag 'binders/folder' %>
+<% end %>
+<% content_for :botcon do %>
+  <%= javascript_include_tag "profile/main" %>
+  <%= javascript_include_tag "home/main" %>
 <% end %>
 
 <div class="container">
